# DualSoul

./: .claude_last_prompt.tmp  .env.example  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  SECURITY.md  build.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml
deploy/: gen_patent_docs.py  patent_data.json
docs/: DualSoul_全局总结_2026-03-14.md  HANDOVER_20260317.md  IP_CONFIRMATION_v1.1.md  IP_CONFIRMATION_v1.2.md  IP_CONFIRMATION_v1.3.docx  IP_CONFIRMATION_v1.3.md  IP_CONFIRMATION_v1.4.docx  IP_CONFIRMATION_v1.4.md  PATENT_DISCLOSURE.docx  PATENT_DISCLOSURE.md  api.md  protocol.md  twin-import-guide.md  whitepaper.md
docs/changelog/: v0.6.2_ip_protection.md  v0.7.0_twin_agent.md  v0.8.0_dual_life_infrastructure.md  v0.8.1_twin_intelligence.md
docs/iterations/: 2026-03-13_v0.4.0_实时社交与开放分身平台.md  README.md
docs/papers/: DualSoul_第四种社交_论文.docx  DualSoul_第四种社交_论文.md
docs/patent/: 00_专利申请指南_v2.md  add_embodiments.py  gen_changelog.py  gen_patent_docs.py  专利10_事件驱动分身自主反应引擎.md  专利11_分身Agent工具使用系统.md  (+10 more)
dualsoul/: __init__.py  __main__.py  auth.py  config.py  connections.py  constants.py  database.py  main.py  models.py  rate_limit.py
examples/: quickstart.py
miniprogram/: app.js  app.json  app.wxss  project.config.json
tests/: conftest.py  test_auth.py  test_autonomous.py  test_identity.py  test_social.py  test_twin.py
web/: index.html  index.min.html  manifest.json  sw.js
(+67 files in other folders)
